--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -3,9 +3,9 @@ name: Rails CI
 on:
   push:
     branches:
-      - master
- pull_request:
-  types: [opened, synchronize, reopened]
+      - main
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
   test:
