--- a/.github/workflows/rails.yml
+++ b/.github/workflows/rails.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '3.x'
+        ruby-version: '3.1.4'
 
     - name: Install dependencies
       run: |
